--- a/public/src/app/views/resources/resources.component.scss
+++ b/public/src/app/views/resources/resources.component.scss
@@ -143,6 +143,13 @@ section.resources{
 						font-weight: 400;
 						text-align: left;
 						text-transform: uppercase;
+
+						span.icon{
+							font-family: 'font_awesome';
+							font-size: 14px;
+							font-weight: 200;
+							color: $primary_blue_light;
+						}
 					}
 				}
 				div.body{
