--- a/public/src/app/views/discovery/discovery.component.scss
+++ b/public/src/app/views/discovery/discovery.component.scss
@@ -191,7 +191,7 @@ section.discovery{
 							font-size: 12px;
 							color: $primary_blue_dark;
 							line-height: 16px;
-							margin-bottom: 24px;
+							min-height: 125px;
 						}
 						a.link{
 							font-size: 12px;
