--- a/public/src/app/views/resources/resources.component.html
+++ b/public/src/app/views/resources/resources.component.html
@@ -3,7 +3,7 @@
 	</div>
 		<div class="search">
 		<span class="icon"></span>
-		<input type="text" placeholder="SEARCH">
+		<input type="text" [(ngModel)]="search_input" (ngModelChange)="display_search()" placeholder="SEARCH">
 	</div>
 	
 	<div class="main_container">
@@ -13,14 +13,10 @@
 					<h3>{{main_categorie.title}}</h3>
 				</div>
 				<div class="body">
-					<div *ngFor="let sub_category of main_categorie.sub_categories; index as secondary_index" class="shortcut" (click)="select_category(primary_index, secondary_index)">
+					<div *ngFor="let sub_category of main_categorie.sub_categories; index as secondary_index" class="shortcut" (click)="select_category(primary_index, secondary_index)" [ngClass]="{'active': sub_category.title == selected_category.title}">
 						<span class="icon">{{sub_category.icon}}</span>
 						<h4>{{sub_category.title}}</h4>
 					</div>
-<!-- 					<div class="shortcut" (click)="switch_from_shortchut_to_article()">
-						<span class="icon"></span>
-						<h4>Bars</h4>
-					</div> -->
 				</div>
 			</div>
 		</div>
@@ -29,25 +25,35 @@
 				<span class="icon"></span>
 				<p>Back to resources </p>
 			</div>
-			<div class="article_group">
+			<div class="article_group" *ngIf="!is_search_active">
 				<div class="header">
 					<h3><span class="icon">{{selected_category.icon}}</span> {{selected_category.title}}</h3>
 				</div>
 				<div class="body">
-					<article *ngFor="let article of all_articles | async | articles_pipe:selected_category.title" routerLink="/article/{{article._id}}">
+					<article *ngFor="let article of all_articles | async | filter_pipe:selected_category.title" routerLink="/article/{{article._id}}">
 						<div class="illustration" [style.backgroundImage]="'url(' + article.content.header + ')'"></div>
 						<div class="content">
 							<h3>{{article.content.title}}</h3>
-							<p class="small">{{article.edit_date}}</p>
+							<p class="small">Published {{article.edit_date | amCalendar}}</p>
 						</div>
 					</article>
-		<!-- 			<article routerLink="/article">
-						<div class="illustration" style="background-image: url(https://images.unsplash.com/photo-1513876585916-61d40895c50e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=c9f192e54c11d74a82641e470899abcf&auto=format&fit=crop&w=1650&q=80)"></div>
+				</div>
+			</div>
+			<div class="article_group" *ngIf="is_search_active">
+				<div class="body">
+					<article *ngFor="let article of all_articles | async | searcher_pipe: search_input" routerLink="/article/{{article._id}}">
+						<div class="illustration" [style.backgroundImage]="'url(' + article.content.header + ')'"></div>
 						<div class="content">
-							<h3>Public Holiday</h3>
-							<p class="small">Published Monday 12 october 2018</p>
+							<h3>{{article.content.title}}</h3>
+							<p class="small">Published {{article.edit_date | amCalendar}}</p>
 						</div>
-					</article> -->
+					</article>
+					
+				</div>
+				<div class="empty_states" *ngIf="(all_articles | async | searcher_pipe: search_input).length === 0">
+					<img src="../../../assets/images/search-illustration.svg" alt="Nothing found">
+					<h3>We didn't found anything</h3>
+					<p>But we really tried !</p>
 				</div>
 			</div>
 		</div>
