--- a/server/templates/emails/email_feedback.html
+++ b/server/templates/emails/email_feedback.html
@@ -291,8 +291,9 @@
                   <table border="0" cellpadding="0" cellspacing="0">
                     <tr>
                       <td>
-                        <p>Hello {{Given_name}},</p>
-                        <p>To activate your account, We just need to validate your email address to activate your Logger account. Simply click the following button:</p>
+                        <p>Hello {Alex,</p>
+                        <p>Here is the feedback:</p>
+                        <p>{{feedback}}</p>
                         <table border="0" cellpadding="0" cellspacing="0" class="btn btn-primary">
                           <tbody>
                             <tr>
@@ -300,7 +301,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0">
                                   <tbody>
                                     <tr>
-                                      <td> <a href="{{verfiy_email_link}}" target="_blank">Activate my account</a> </td>
+                                      <td> <a href="{{verfiy_email_link}}" target="_blank">Check the article</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
