--- a/public/src/app/views/resources/resources.component.html
+++ b/public/src/app/views/resources/resources.component.html
@@ -1,5 +1,5 @@
 <section class="resources">
-	<div class="hero" style="background-image: url('https://images.unsplash.com/photo-1513343987712-5da15ea2a9bb?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=44ec6f8e29bc280971e4d98969aa21c5&auto=format&fit=crop&w=2534&q=80');">
+	<div class="hero" style="background-image: url('../../../assets/images/resource_background.jpg');">
 	</div>
 		<div class="search">
 		<span class="icon"></span>
