--- a/public/src/app/views/resources/resources.component.scss
+++ b/public/src/app/views/resources/resources.component.scss
@@ -33,6 +33,7 @@ section.resources{
 		input{
 			float: left;
 			height: 38px;
+			font-size: 16px;
 			border: none;
 			width: calc(100% - 60px)
 		}
@@ -56,14 +57,14 @@ section.resources{
 			}
 			span.icon{
 				font-family: 'font_awesome';
-				font-family: 18px;
+				font-size: 18px;
 				color: $primary_blue_dark;
 				float: left;
 				transition: all 200ms;
 			}
 			p{
 				font-family: 'istok';
-				font-family: 18px;
+				font-size: 18px;
 				float: left;
 				margin-left: 12px;
 				color: $primary_blue_dark;
@@ -106,12 +107,7 @@ section.resources{
 						&:hover{
 							box-shadow: 0px 0px 10px rgba(black, 0.3);
 						}
-						&.active{
-							background-color: $secondary_yellow_med;
-							
-							h4{ color: white; }
-							span.icon{ color: white; }
-						}
+						&.active{}
 						span.icon{
 							font-family: 'font_awesome';
 							font-size: 20px;
@@ -271,6 +267,12 @@ section.resources{
 							&:nth-child(3n){margin-right: 0;}
 							&:hover{
 								box-shadow: 0px 0px 10px rgba(black, 0.3);
+							}
+							&.active{
+								background-color: $secondary_yellow_med;
+								
+								h4{ color: white; }
+								span.icon{ color: white; }
 							}
 							span.icon{
 								font-family: 'font_awesome';
