Update content & SEO

--- a/public/src/app/views/discovery/discovery.component.html
+++ b/public/src/app/views/discovery/discovery.component.html
@@ -6,9 +6,8 @@
 				<img src="../../../assets/images/discovery-illustration.svg" alt="Rocket launch">
 			</div>
 			<div class="body">
-				<h1>Expat manual to your service</h1>
-				<p>Expat manual is a travel guide for those who want to live in Sydney.  Expat manual has for goal to help you settling up in a new place (Sydney, as for a start) by giving you the information that matter before, during, and after you established. <span class="highlight">If you ever setteled in a new country, for a month or a decade, you probably struggle filling up administrative paper, or searching for a not too touristic place.</span> I certainly did and I that is why I try to make it easier for someone new to settle. <br>
-				Our resources are divided by article and categories for a better search. Below, a timeline of resrources in function of the time of the year. </p>
+				<h1>Expat Manual, the travel guide to settle in Sydney</h1>
+				<p>With Expat Manual we want to help you settling in Sydney (for a start). Our goal is to provide articles that matter before, during and after you've established. We all feel the struggle when arriving to a new city to see beyond the touristic attraction. <span class="highlight">But also to understand the culture, history, and the local laws.</span> We certainly did and that is why we are trying to make it easier for you to pass this initial struggle.</p>
 			</div>
 		</div>
 
