--- a/public/src/app/views/discovery/discovery.component.html
+++ b/public/src/app/views/discovery/discovery.component.html
@@ -35,7 +35,7 @@
 		<div class="article">
 			<div class="month">
 				<div class="header">
-					<h3>May 2018</h3>
+					<h3>Latest Articles</h3>
 				</div>
 				<div class="body">
 					<article *ngFor="let article of all_articles | async">
