Create static url for ressources, to fall back in the right category

--- a/public/src/app/views/article/article.component.scss
+++ b/public/src/app/views/article/article.component.scss
@@ -117,6 +117,7 @@ section.article{
 		@include container_sizing( 600px );
 		overflow: auto;
 		margin-bottom: 16px;
+		padding: 5px 0;
 		cursor: pointer;
 
 		&:hover{
